# BiocGOprep

./: .gitignore  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yml
go_ontology/: __init__.py  build_db.py  build_parquet.py
tests/: conftest.py  test_build_db.py  test_build_parquet.py  test_transitive_closure_hyp.py
